base/src/test/resources/failure/tyck/literal-ambiguous-1.aya.txt
In file $FILE:9:17 ->

  7 | 
  8 | def ok : Option Nat1 => some 114
  9 | def lit1 => some 514
                       ^-^

Error: Unsolved meta A'
       in `Option A'`
       in `Option A'`

In file $FILE:9:17 ->

  7 | 
  8 | def ok : Option Nat1 => some 114
  9 | def lit1 => some 514
                       ^-^

Error: Unsolved meta A'
       in `some 514`

In file $FILE:9:17 ->

  7 | 
  8 | def ok : Option Nat1 => some 114
  9 | def lit1 => some 514
                       ^-^

Error: Unsolved meta A'
       in `514`
       in `some 514`

3 error(s), 0 warning(s).
What are you doing?
